<resources>
    //toolbar
    <string name="app_name">TV-Remote</string>
    <string name="receiver">Receiver</string>
    <string name="television">Television</string>
    <string name="led_table">LED-Table</string>
    <string name="led_cupboard">LED-Cupboard</string>
    <string name="tv_remote2">Television 2</string>
    <string name="room_light">Room-Light</string>
    <string name="tv_fire_tv">FireTV</string>
    <string name="table_ventilator">Table-Ventilator ON/OFF</string>
    <string name="pc_energyConservation">PC Power Saving Mode</string>
    <string name="pcRemoteControl">PC</string>
    <string name="alarm">Alarm</string>
    <string name="left_page">Left Page</string>
    <string name="right_page">Right Page</string>
    <string name="light_dimming">Light-Dimming</string>

    //drawer menu
    <string name="drawerTitle">Smart Home</string>
    <string name="settings">Settings</string>
    <!--<string name="share">Share</string>-->
    <string name="aboutUs">About Us</string>

    //led table
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="brighter">UP</string>
    <string name="darker">DOWN</string>
    <string name="change">C</string>
    <string name="smooth">S</string>
    <string name="daytime">1H24</string>
    <string name="one_hour">+1H</string>

    //receiver
    <string name="on_off">On/Off</string>
    <string name="menu">Menu</string>
    <string name="open">Open</string>
    <string name="control_up">/\\</string>
    <string name="control_down">\\/</string>
    <string name="control_left">&lt;</string>
    <string name="control_right">&gt;</string>
    <string name="setup">setup</string>
    <string name="back">back</string>
    <string name="backwards">&lt;&lt;</string>
    <string name="forwards">&gt;&gt;</string>
    <string name="play_pause">play/pause</string>
    <string name="stop">stop</string>
    <string name="previous">prev</string>
    <string name="next">next</string>

    //television
    <string name="television_taster_1">1</string>
    <string name="television_taster_2">2</string>
    <string name="television_taster_3">3</string>
    <string name="television_taster_4">4</string>
    <string name="television_taster_5">5</string>
    <string name="television_taster_6">6</string>
    <string name="television_taster_7">7</string>
    <string name="television_taster_8">8</string>
    <string name="television_taster_9">9</string>
    <string name="television_taster_0">0</string>
    <string name="television_turn_up_sound">+</string>
    <string name="television_turn_down_sound">-</string>
    <string name="television_up">up</string>
    <string name="television_down">down</string>
    <string name="television_next">next</string>
    <string name="television_on">on/off</string>
    <string name="television_quiet">quiet</string>
    <string name="television_HDMI">HDMI</string>
    <string name="television_pre_ch">pre-ch</string>
    <string name="television_a">A</string>

    //television second page
    <string name="television_source">source</string>
    <string name="television_menu">menu</string>
    <string name="television_guide">guide</string>
    <string name="television_tools">tools</string>
    <string name="television_info">info</string>
    <string name="television_return">return</string>
    <string name="television_exit">exit</string>
    <string name="television_break">break</string>
    <string name="television_play">play</string>
    <string name="television_stop">stop</string>
    <string name="television_record">record</string>

    //led strings
    <string name="ledStringCubpboard">Cupboard</string>
    <string name="ledStringTable">LED</string>

    //pc remote control
    <string name="leftClick">left click</string>
    <string name="rightClick">right click</string>
    <string name="alertPasswordDialogHintTest">Password</string>

    //activity keyboard
    <string name="leftArrow">&lt;-</string>
    <string name="rightArrow">-&gt;</string>
    <string name="esc">ESC</string>
    <string name="tab">TAB</string>
    <string name="enter">ENTER</string>
    <string name="windows">Win</string>
    <string name="altF4">alt+F4</string>
    <string name="winE">Win+e</string>
    <string name="keyboardHintMessage">Write your message here!</string>

    //music control
    <string name="startStop">play stop </string>

    //image Description
    <string name="image_desc_colours">Contains multiple colours u can pick</string>
    <string name="title_activity_pc_remote_control">pcRemoteControl</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="imageMousePadDescription">mouse pad image</string>
    <string name="buchhorchLogo">Is the logo of our friendship group</string>

    //alarm clock
    <string name="moToFr">Mo to Fr</string>
    <string name="everyDay">every day</string>
    <string name="userFrame">user frame</string>
    <string name="alarms">Alarms</string>
    <string name="addAlarm">Add</string>
    <string name="M">M</string>
    <string name="T">T</string>
    <string name="W">W</string>
    <string name="F">F</string>
    <string name="S">S</string>
    <string name="save">Save</string>
    <string name="new_task">New Task</string>

    //room light dimming
    <string name="zeroPercentage">0%</string>
    <string name="temperature">Temp:</string>
    <string name="humidity">Humidity:</string>
    <string name="partyLight">Party Light:</string>
    <string name="currentTemp">not</string>
    <string name="currentHumidity">reachable</string>

</resources>
