<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/pages">
        <item android:id="@+id/nav_television"
            android:icon="@drawable/toolbar_ic_television"
            android:title="@string/television">
        </item>
        <item android:id="@+id/nav_led_table"
            android:icon="@drawable/toolbar_ic_led_table"
            android:title="@string/led_table">
        </item>
        <item android:id="@+id/nav_led_cupboard"
            android:icon="@drawable/toolbar_ic_led_table"
            android:title="@string/led_cupboard">
        </item>
        <item android:id="@+id/nav_pc"
            android:icon="@drawable/toolbar_ic_pc"
            android:title="@string/pcRemoteControl">
        </item>
        <item android:id="@+id/nav_alarm"
            android:icon="@drawable/toolbar_ic_alarm"
            android:title="@string/alarm">
        </item>
        <item android:id="@+id/nav_receiver"
            android:icon="@drawable/toolbar_ic_receiver"
            android:title="@string/receiver">
        </item>
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/buttons">
        <item android:id="@+id/nav_room_light"
            android:title="@string/room_light">
        </item>
        <item android:id="@+id/nav_ventilator"
            android:title="@string/table_ventilator">
        </item>
    </group>


    <group android:checkableBehavior="single"
        android:id="@+id/general">
        <item android:id="@+id/nav_settings"
            android:icon="@drawable/toolbar_ic_settings"
            android:title="@string/settings">
        </item>
        <!--<item android:id="@+id/nav_share"
            android:title="@string/share">
        </item>-->
        <item android:id="@+id/nav_aboutus"
            android:icon="@drawable/toolbar_ic_about_us"
            android:title="@string/aboutUs">
        </item>
    </group>

</menu>