<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_led_table"
        android:icon="@drawable/ic_led"
        android:title="@string/led_table"
        app:showAsAction="always" />

    <item android:title="@string/television"
        android:id="@+id/toolbar_television"
        app:showAsAction="always"
        android:icon="@drawable/ic_television"
        tools:ignore="AlwaysShowAction" />

    <item android:title="@string/reciver"
        android:id="@+id/toolbar_reciver"
        app:showAsAction="always"
        android:icon="@drawable/ic_reciver"/>

    <item android:title="@string/led_cupboard"
        android:id="@+id/toolbar_led_cupboard"
        app:showAsAction="always"
        android:icon="@drawable/ic_led_cupboard"
        />
</menu>