<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/dark_background"
    tools:context=".Receiver">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="-52dp"
        tools:layout_editor_absoluteY="270dp" />

    <Button
        android:id="@+id/receiver_setup"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_blue"
        android:text="@string/setup"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/receiver_backward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiver_left" />

    <Button
        android:id="@+id/receiver_menu"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_blue"
        android:text="@string/menu"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/receiver_up"
        app:layout_constraintEnd_toEndOf="@+id/receiver_ok"
        app:layout_constraintStart_toEndOf="@+id/receiver_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398" />

    <Button
        android:id="@+id/receiver_open"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_blue"
        android:text="@string/open"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/receiver_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/receiver_up"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/control_up"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/receiver_ok"
        app:layout_constraintEnd_toEndOf="@+id/receiver_ok"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/receiver_ok" />

    <Button
        android:id="@+id/receiver_left"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/control_left"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/receiver_ok"
        app:layout_constraintEnd_toStartOf="@+id/receiver_ok"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/receiver_ok"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/receiver_ok"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_rectangle_gray_without_border"
        android:text="@android:string/ok"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.423" />

    <Button
        android:id="@+id/receiver_right"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/control_right"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/receiver_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/receiver_ok"
        app:layout_constraintTop_toTopOf="@+id/receiver_ok"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/receiver_down"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/control_down"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/receiver_ok"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/receiver_ok"
        app:layout_constraintTop_toBottomOf="@+id/receiver_ok"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/receiver_on_off"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="12dp"
        android:background="@drawable/receiver_blue"
        android:text="@string/on_off"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/receiver_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/receiver_back"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_blue"
        android:text="@string/back"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/receiver_forward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiver_right" />

    <Button
        android:id="@+id/receiver_backward"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_blue"
        android:text="@string/backwards"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/receiver_play_pause"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/receiver_play_pause"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_blue"
        android:text="@string/play_pause"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiver_down"
        app:layout_constraintVertical_bias="0.149" />

    <Button
        android:id="@+id/receiver_forward"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_blue"
        android:text="@string/forwards"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/receiver_play_pause"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/receiver_previous"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_blue"
        android:text="@string/previous"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiver_play_pause" />

    <Button
        android:id="@+id/receiver_stop"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_blue"
        android:text="@string/stop"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiver_play_pause" />

    <Button
        android:id="@+id/receiver_next"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_blue"
        android:text="@string/next"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiver_play_pause" />



</androidx.constraintlayout.widget.ConstraintLayout>