<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/dark_background"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/tv_remote_quiet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/receiver_rectangle_gray"
        android:drawableTop="@drawable/ic_volume_off"
        app:layout_constraintBottom_toBottomOf="@+id/second_row"
        app:layout_constraintLeft_toLeftOf="@+id/second_column"
        app:layout_constraintRight_toRightOf="@+id/third_column"
        app:layout_constraintTop_toTopOf="@+id/first_five_row" />

    <Button
        android:id="@+id/tv_remote_info"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_round_gray"
        android:text="@string/television_info"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/fourth_row"
        app:layout_constraintLeft_toLeftOf="@+id/first_column"
        app:layout_constraintRight_toRightOf="@+id/fourth_column"
        app:layout_constraintTop_toTopOf="@+id/third_row">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

    <Button
        android:id="@+id/tv_remote_1"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/television_taster_1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />


    <Button
        android:id="@+id/tv_remote_2"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/television_taster_2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/tv_remote_3"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/television_taster_3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/tv_remote_4"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/television_taster_4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/tv_remote_5"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/television_taster_5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/tv_remote_6"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/television_taster_6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/tv_remote_7"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/television_taster_7"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/tv_remote_8"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/television_taster_8"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/tv_remote_9"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/television_taster_9"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/tv_remote_0"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/television_taster_0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.80" />

    <Button
        android:id="@+id/tv_remote_up"
        android:layout_width="75dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/television_up"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813" />

    </TableLayout>

    <Button
        android:id="@+id/tv_remote_quiet_sound"
        android:layout_width="75dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/television_up"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/sixth_row"
        app:layout_constraintLeft_toLeftOf="@+id/third_column"
        app:layout_constraintRight_toRightOf="@+id/fourth_column"
        app:layout_constraintTop_toTopOf="@+id/fifth_row" />

    <Button
        android:id="@+id/tv_remote_down"
        android:layout_width="75dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/television_down"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/eighth_row"
        app:layout_constraintLeft_toLeftOf="@+id/third_column"
        app:layout_constraintRight_toRightOf="@+id/fourth_column"
        app:layout_constraintTop_toTopOf="@+id/seventh_row" />

    <Button
        android:id="@+id/tv_remote_next"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/television_next"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <Button
        android:id="@+id/tv_remote_turn_up_sound"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/television_turn_up_sound"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/sixth_row"
        app:layout_constraintLeft_toLeftOf="@+id/first_column"
        app:layout_constraintRight_toRightOf="@+id/second_column"
        app:layout_constraintTop_toTopOf="@+id/fifth_row" />

    <Button
        android:id="@+id/tv_remote_quiet_sound"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/receiver_rectangle_gray"
        android:text="@string/television_turn_down_sound"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/eighth_row"
        app:layout_constraintLeft_toLeftOf="@+id/first_column"
        app:layout_constraintRight_toRightOf="@+id/second_column"
        app:layout_constraintTop_toTopOf="@+id/seventh_row" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="-52dp"
        tools:layout_editor_absoluteY="270dp" />
</androidx.constraintlayout.widget.ConstraintLayout>